finished product detail and shop page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,11 @@
 @import "components/appbar";
 @import "components/categories-bar";
 @import "components/carousel";
+@import "components/carousel2";
 @import "components/footer";
+@import "components/bottom-tab";
+@import "components/back-to-top";
 
 @import "pages/home";
+@import "pages/product-detail";
+@import "pages/shop";
