--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -12,6 +12,16 @@ html {
 }
 
 
-::-webkit-scrollbar {
-  display: none;
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
