--- a/src/sass/components/appbar.scss
+++ b/src/sass/components/appbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding: 15px;
   font-size: 18px;
 
@@ -11,6 +11,12 @@
   &__logo {
     width: 100px;
     height: 30px;
+
+    @include respond(mobile) {
+      width: 70px;
+      height: 30px;
+    }
+
   }
 
   &__signin {
