--- a/src/sass/components/carousel.scss
+++ b/src/sass/components/carousel.scss
@@ -1,13 +1,9 @@
 .carousel {
-  @include container;
-  margin-top: 20px;
-  white-space: nowrap;
-  overflow: auto;
-  display: flex;
 
   &__title {
     text-align: center;
     font-size: 30px;
+    margin-bottom: 20px;
   }
 
 
@@ -17,7 +13,8 @@
 
     &-photo {
       width: 150px;
-      height: auto;
+      height: 150px;
+      object-fit: contain;
     }
 
     &-brand {
