--- a/src/sass/components/categories-bar.scss
+++ b/src/sass/components/categories-bar.scss
@@ -20,11 +20,15 @@
 
   }
 
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
   &__mobile {
     display: none;
     white-space: nowrap;
     overflow: auto;
+
 
     &-button {
       border-radius: 5px;
