--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -18,6 +18,7 @@
 
     & > div {
       @include flex;
+      margin-top: 20px;
 
       & > p {
         margin-left: 10px;
@@ -26,11 +27,18 @@
   }
 
   &__copyright {
-    padding-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 100px;
     @include flex;
     justify-content: space-between;
     flex-wrap: wrap;
 
+    &-social {
+      margin-top: 20px;
+      & > * {
+        margin-left: 20px;
+      }
+    }
 
     &-info {
       @include flex;
@@ -42,9 +50,19 @@
     }
   }
 
-  &__social {
-    & > * {
-      margin-left: 20px;
+
+
+  &__app {
+    border-bottom: 1px solid gray;
+    padding-bottom: 30px;
+    align-items: center;
+    text-align: center;
+
+    &-download {
+
+      & > img {
+
+      }
     }
   }
 
