--- a/src/sass/mixin.scss
+++ b/src/sass/mixin.scss
@@ -2,7 +2,7 @@
   @if $breakpoint == mobile {
     @media only screen and (max-width: 80.5em) {
       @content
-    }; //600px
+    };
   }
 }
 
@@ -10,6 +10,28 @@
   display: flex;
   align-items: center;
 }
+
+
+@mixin button-white{
+  border-radius: 30px;
+  padding: 15px;
+  cursor: pointer;
+  font-weight: bold;
+  background: white;
+  border: 1px solid black;
+}
+
+@mixin button-black{
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 20px;
+  border-radius: 30px;
+  padding: 15px;
+  color: white;
+  background: black;
+  border: none;
+}
+
 
 
 @mixin container {
