--- a/src/sass/pages/shop.scss
+++ b/src/sass/pages/shop.scss
@@ -2,10 +2,11 @@
   @include container;
   margin-top: 30px;
   display: flex;
+  align-items: flex-start;
 
   &__filter {
     margin-bottom: 20px;
-    margin-right: 40px;
+    margin-right: 20px;
     border-right: 1px solid lightgray;
     padding-right: 20px;
 
@@ -14,9 +15,25 @@
     }
 
 
+    &--title {
+      @include flex;
+      justify-content: space-between;
+    }
+
+    &--value{
+      text-align: center;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    &--reset {
+      color: blue;
+      cursor: pointer;
+    }
+
     &--name {
       font-weight: bold;
-      margin-bottom: 10px;
+      margin: 10px 0;
     }
 
     &--checkbox {
@@ -72,9 +89,66 @@
 
       &-rating {
         font-weight: bold;
+      }
+    }
+  }
+
+
+  &__mobile-filter {
+    display: none;
+    margin: 20px;
+
+
+    &--dialog {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+
+      &-header {
+        @include flex;
+        justify-content: space-between;
+      }
+
+      &-list {
+        margin-bottom: auto;
+        margin-top: 20px;
+      }
+
+      &-button {
+        @include flex;
+        justify-content: space-between;
+
+        &-reset {
+          @include button-white;
+          width: 50%;
+        }
+
+        &-done {
+          width: 50%;
+          @include button-black;
+        }
 
       }
 
+
+    }
+
+    &--button {
+      @include flex;
+      border-radius: 5px;
+      padding: 10px;
+      border: 1px solid lightgray;
+      justify-content: center;
+
+      & > p {
+        margin-right: 20px;
+      }
+    }
+
+    @include respond(mobile) {
+      display: block;
     }
 
 
