fixed responsive ads

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/footer";
 @import "components/bottom-tab";
 @import "components/back-to-top";
+@import "components/ads";
 
 @import "pages/home";
 @import "pages/product-detail";
