--- a/src/sass/components/back-to-top.scss
+++ b/src/sass/components/back-to-top.scss
@@ -5,7 +5,7 @@
 .back-to-top {
   position: fixed;
   width: 100%;
-  top: 0;
+  top: 10px;
   align-items: center;
   height: 20px;
   justify-content: center;
