--- a/src/sass/components/bottom-tab.scss
+++ b/src/sass/components/bottom-tab.scss
@@ -2,8 +2,8 @@
   position: fixed;
   bottom: 0;
   display: none;
+  z-index: 2000;
   align-items: center;
-  font-size: 13px;
   text-align: center;
   justify-content: space-evenly;
   background: white;
