--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/bottom-tab";
 @import "components/back-to-top";
 @import "components/ads";
+@import "components/signin-modal";
 
 @import "pages/home";
 @import "pages/product-detail";
