--- a/src/sass/components/appbar.scss
+++ b/src/sass/components/appbar.scss
@@ -24,7 +24,7 @@
     align-items: center;
 
     &--modal {
-      transition: 2s;
+      transition: .2s;
       position: absolute;
       z-index: 2000;
       right: -150px;
@@ -36,7 +36,12 @@
       border-radius: 5px;
 
       @include respond(mobile) {
-        display: none;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
       }
 
 
@@ -45,6 +50,7 @@
 
         & > div {
           margin-left: 20px;
+
           & > p {
             font-size: 15px;
           }
