added basket modal

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,8 @@
 @import "components/back-to-top";
 @import "components/ads";
 @import "components/signin-modal";
+@import "components/user-modal";
+@import "components/basket-modal";
 
 @import "pages/home";
 @import "pages/product-detail";
