--- a/src/sass/components/basket-modal.scss
+++ b/src/sass/components/basket-modal.scss
@@ -3,21 +3,14 @@
   position: absolute;
   z-index: 2000;
   top: 50px;
-  right: -150px;
+  right: 0;
   width: 400px;
   background: white;
+  overflow: auto;
   padding: 20px;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 
-  @include respond(mobile) {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-  }
 
   &__title {
     @include flex;
