--- a/src/sass/components/categories-bar.scss
+++ b/src/sass/components/categories-bar.scss
@@ -33,10 +33,13 @@
     &-button {
       border-radius: 5px;
       cursor: pointer;
-
+      border: none;
       margin-left: 10px;
       padding: 10px;
+      margin-top: 5px;
+      margin-bottom: 5px;
       background: white;
+      box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.3);
     }
 
     @include respond(mobile) {
