--- a/src/sass/components/signin-modal.scss
+++ b/src/sass/components/signin-modal.scss
@@ -3,11 +3,12 @@
   position: fixed;
   top: 50%;
   padding: 20px;
-  z-index: 2000;
+  z-index: 3000;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   left: 50%;
+  overflow: auto;
   transform: translate(-50%, -50%);
   background: white;
   border-radius: 5px;
@@ -16,7 +17,6 @@
   @include respond(mobile) {
     width: 100%;
     height: 100%;
-    padding-bottom: 80px;
   }
 
   &__title {
