--- a/src/sass/components/user-modal.scss
+++ b/src/sass/components/user-modal.scss
@@ -5,6 +5,7 @@
   right: -150px;
   top: 50px;
   width: 400px;
+  overflow: auto;
   background: white;
   padding: 20px;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
@@ -12,11 +13,10 @@
 
   @include respond(mobile) {
     position: fixed;
-    bottom: 0;
     left: 0;
     right: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
   }
 
 
