--- a/src/sass/components/user-modal.scss
+++ b/src/sass/components/user-modal.scss
@@ -8,7 +8,7 @@
   overflow: auto;
   background: white;
   padding: 20px;
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: $box-shadow;
   border-radius: 5px;
 
   @include respond(mobile) {
