--- a/src/sass/components/user-modal.scss
+++ b/src/sass/components/user-modal.scss
@@ -57,6 +57,7 @@
     & > a {
       @include flex;
       padding: 10px 0;
+      cursor: pointer;
 
       &:not(:last-child) {
         border-bottom: 1px solid lightgray;
