--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/signin-modal";
 @import "components/user-modal";
 @import "components/basket-modal";
+@import "components/quick-look-modal";
 
 @import "pages/home";
 @import "pages/product-detail";
