--- a/src/sass/components/categories-bar.scss
+++ b/src/sass/components/categories-bar.scss
@@ -39,7 +39,7 @@
       margin-top: 5px;
       margin-bottom: 5px;
       background: white;
-      box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 6px 0 lightgray;
     }
 
     @include respond(mobile) {
