added input validation for register and login. integrated with laravel backend and added env for production and development api

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -17,6 +17,14 @@ a {
   color: unset;
 }
 
+.modal__backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
