--- a/src/sass/components/signin-modal.scss
+++ b/src/sass/components/signin-modal.scss
@@ -36,7 +36,13 @@
     &:focus {
       outline: none;
     }
+  }
 
+  &__error {
+    font-size: 14px;
+    margin-top: -7px;
+    color: red;
+    margin-bottom: 15px;
   }
 
   &__forget {
