--- a/src/sass/components/carousel2.scss
+++ b/src/sass/components/carousel2.scss
@@ -15,7 +15,13 @@
     height: 320px;
     padding: 20px;
     margin-left: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
+
+    &:hover{
+      transform: translateY(-4px);
+      transition-duration: .4s;
+    }
 
     &--photo {
       width: 100%;
