--- a/src/sass/components/quick-look-modal.scss
+++ b/src/sass/components/quick-look-modal.scss
@@ -44,6 +44,8 @@
 
   &__product {
     display: flex;
+    flex: 1;
+    margin-left: 20px;
     justify-content: space-between;
     flex-direction: column;
 
@@ -73,7 +75,7 @@
 
     &-price {
       font-weight: bold;
-      font-size: 20px;
+      font-size: 16px;
     }
 
     &-select {
