--- a/src/sass/components/carousel.scss
+++ b/src/sass/components/carousel.scss
@@ -33,11 +33,12 @@
     }
 
     &-brand {
+      font-size: 16px;
       font-weight: bold;
     }
 
     &-name {
-
+      font-size: 15px;
     }
 
   }
