--- a/src/sass/components/carousel2.scss
+++ b/src/sass/components/carousel2.scss
@@ -18,7 +18,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
 
-    &:hover{
+    &:hover {
       transform: translateY(-4px);
       transition-duration: .4s;
     }
@@ -54,8 +54,14 @@
     }
 
     &--rating {
-      font-weight: bold;
       font-size: 18px;
+      display: flex;
+      align-items: center;
+
+      & > p {
+        margin-left: 10px;
+        font-size: 14px;
+      }
     }
 
   }
