--- a/src/sass/components/quick-look-modal.scss
+++ b/src/sass/components/quick-look-modal.scss
@@ -65,6 +65,9 @@
 
     &-detail {
       margin-top: 20px;
+      height: 85px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &-more {
